EASYOPAC-937 - Fixed size for nodlist on mobile device.

--- a/scss/components/_overrides.scss
+++ b/scss/components/_overrides.scss
@@ -97,3 +97,11 @@ html #page .content-wrapper .content-inner .row:last-child {
     margin-bottom: 10px;
   }
 }
+
+.field-type-culture-frontend-lists-control {
+  .view-content.row{
+    .views-row {
+      margin-bottom: 10px;
+    }
+  }
+}
