--- a/scss/components/modules/_instagram.scss
+++ b/scss/components/modules/_instagram.scss
@@ -1,7 +1,6 @@
 /* Instagram styles
    ========================================================================== */
 .pane-instagram-block-instagram-block {
-  margin-bottom: 40px;
   margin-top:20px;
 
   .ding-social-insta-item {
